@@ -16,13 +16,13 @@
 ##################################################
 # Filters to be used in file open/close/save etc #
 ##################################################
-filter.html=HTML (.html;.htm;.asp;.shtml;*.tpt)|*.html;*.htm;*.asp;*.shtml;*.tpt|
+filter.html=HTML (.html;.htm;.asp;.shtml;*.tpt;*.spt)|*.html;*.htm;*.asp;*.shtml;*.tpt;*.spt|
 filter.php=PHP (.php3;.phtml;.inc;.php;*.mod;*.cpt)|*.php3;*.phtml;*.inc;*.php;*.mod;*.cpt|
 
 ############################################
 # File patterns defined for all file types #
 ############################################
-file.patterns.html=*.html;*.htm;*.asp;*.shtml;*.php3;*.phtml;*.inc;*.php;*.mod;*.cpt;*.tpt
+file.patterns.html=*.html;*.htm;*.asp;*.shtml;*.php3;*.phtml;*.inc;*.php;*.mod;*.cpt;*.tpt;*.spt
 
 ####################################################
 # Lexer to be used for corresponding file patterns #
